--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tsparticles/engine": "^3.5.0",
+    "@tsparticles/react": "^3.0.0",
     "@types/bootstrap": "^5.2.10",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.7.2",
