--- a/server/package.json
+++ b/server/package.json
@@ -17,9 +17,10 @@
     "fastify": "^4.28.1",
     "fastify-bcrypt-plugin": "^1.0.6",
     "jsonwebtoken": "^9.0.2"
-    },
+  },
   "devDependencies": {
     "@types/fastify-cors": "^2.1.0",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.14.11",
     "nodemon": "^3.1.4",
     "prisma": "^5.17.0",
