update: admin add

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,5 @@
-DATABASE_URL="postgresql://postgres:1234@localhost:CSs58894/postgres"
+DATABASE_URL_SERVER="postgresql://postgres:1234@localhost:CSs58894/postgres"
+DATABASE_URL1="postgres://postgres:1234@localhost:5432/postgres"
+DATABASE_URL="postgres://devseplagpy:1Bh8dovG1xI3CqX0KyJS@191.252.60.33:5432/prod"
+
+
